--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+Adafruit-Blinka==8.61.2
+adafruit-circuitpython-busdevice==5.2.13
+adafruit-circuitpython-connectionmanager==3.1.5
+adafruit-circuitpython-lsm9ds1==2.1.26
+adafruit-circuitpython-requests==4.1.13
+adafruit-circuitpython-typing==1.12.1
+Adafruit-PlatformDetect==3.80.0
+Adafruit-PureIO==1.1.11
+AHRS==0.3.1
 bidict==0.23.1
 binho-host-adapter==0.1.6
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.58.4
+kiwisolver==1.4.8
 lgpio==0.2.2.0
+matplotlib==3.10.3
 msgpack==1.1.0
+numpy==2.3.1
 packaging==24.2
+pillow==11.2.1
 pyftdi==0.56.0
+pyparsing==3.2.3
 pyserial==3.5
 python-can==4.5.0
+python-dateutil==2.9.0.post0
+pyusb==1.3.1
 RPi.GPIO==0.7.1
 rpi_ws281x==5.0.0
 six==1.17.0
